# llm-multiple-choice-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
llm_multiple_choice/: __init__.py  analyzer.py  choice_code.py  choice_code_set.py  choice_manager.py  choice_section.py  choices.py  display_format.py  exceptions.py  utils.py
scripts/: build_and_publish.sh
tests/: test_chat_analyzer.py  test_choice_manager.py  test_choose.py
